styles.css name change

--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="vviewport" content="width=device-width" />
-    <title>Demo-site DWW2</title>
-    <link href="sstyles.css" rel="stylesheet" />
+    <title>Demo-site DW2</title>
+    <link href="styles.css" rel="stylesheet" />
   </head>
 
   <body>
